# drf_test

./: .coverage  .env_template  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
config/: permissions.py  settings.py  urls.py  validators.py
courses/: models.py  serializers.py  tests.py  urls.py  views.py
htmlcov/: d_1cce4d667577f1b2_0001_initial_py.html  d_1cce4d667577f1b2_0002_lesson_course_alter_lesson_link_alter_lesson_preview_py.html  d_1cce4d667577f1b2___init___py.html  d_1ea838694151cac8___init___py.html  d_1ea838694151cac8_asgi_py.html  d_1ea838694151cac8_permissions_py.html  d_1ea838694151cac8_settings_py.html  d_1ea838694151cac8_urls_py.html  d_1ea838694151cac8_validators_py.html  d_1ea838694151cac8_wsgi_py.html  d_3ca9795f375a63ba___init___py.html  d_3ca9795f375a63ba_admin_py.html  d_3ca9795f375a63ba_apps_py.html  d_3ca9795f375a63ba_models_py.html  d_3ca9795f375a63ba_serializers_py.html  d_3ca9795f375a63ba_tests_py.html  d_3ca9795f375a63ba_urls_py.html  d_3ca9795f375a63ba_views_py.html  d_7ea6734d0eea0a17___init___py.html  d_7ea6734d0eea0a17_admin_py.html  d_7ea6734d0eea0a17_apps_py.html  d_7ea6734d0eea0a17_models_py.html  d_7ea6734d0eea0a17_tests_py.html  d_7ea6734d0eea0a17_views_py.html  d_a44f0ac069e85531___init___py.html  d_aa7c8bb94e6dd4ce___init___py.html  d_b0f0b7cb819bfdf1___init___py.html  d_b0f0b7cb819bfdf1_admin_py.html  d_b0f0b7cb819bfdf1_apps_py.html  d_b0f0b7cb819bfdf1_models_py.html  d_b0f0b7cb819bfdf1_serializers_py.html  d_b0f0b7cb819bfdf1_tests_py.html  d_b0f0b7cb819bfdf1_urls_py.html  (+21 more)
(+28 files in other folders)
